test/simple/correct/Lambda3.hs
module Lambda3 where

main :: Int
main = (\_ -> 4) 1 

