test/simple/typeerrors/Edinburgh/Ex16.hs
module Ex16 where

test = \x -> (x+1) (if x then x+1 else x-2.2)
